# yodaos

./: Dockerfile  LICENSE  Makefile  README.md  configure  manifest.xml
apps/battery/: CMakeLists.txt  app.js  constant.json  package.json
apps/ota/: CMakeLists.txt  app.js  constant.js  package.json
apps/ota/script/: notify
framework/libs/android-corelibs/: CMakeLists.txt
framework/libs/android-corelibs/libcutils/: CMakeLists.txt  ashmem-dev.c  atomic.c  properties.c  safe_iop.c  sched_policy.c  sockets.c
framework/libs/android-corelibs/libutils/: CMakeLists.txt  CallStack.cpp  Makefile  Printer.cpp  SharedBuffer.cpp  String8.cpp  SystemClock.cpp  Threads.cpp  Timers.cpp
framework/libs/android-headers/: .gitignore  CMakeLists.txt
framework/libs/android-headers/cmake/: FindAndroidCUtils.cmake
framework/libs/httpsession/: .gitignore  CMakeLists.txt  LICENSE.md
framework/libs/httpsession/docs/: README.md
framework/libs/httpsession/include/: HttpSession.h
framework/libs/inputevent/: CMakeLists.txt
framework/libs/inputevent/demo/: CMakeLists.txt  input_hot.c
framework/libs/inputevent/docs/: input-event-daemon.8  input-event-daemon.html  input-event-daemon.txt
framework/libs/inputevent/etc/: S99input-event  input-event.service
framework/libs/inputevent/include/: input-event-hot.h  input-event-table.h  input-event.h  parse_input_h.awk
framework/libs/inputevent/src/: CMakeLists.txt  input-event-hot.c  input-event.c
framework/libs/inputevent/yodamk/: Makefile
framework/libs/libeloop/: CMakeLists.txt
framework/libs/libeloop/include/: eloop.h
framework/libs/libeloop/src/: eloop.c  fd.c  fd.h  list.c  list.h  olist.c  olist.h  scheduler.c  scheduler.h  syncer.c  syncer.h  tasks_queue.c  tasks_queue.h
framework/libs/libeloop/tests/: CMakeLists.txt  dummy.c  eloop.c  fd.c  list.c  olist_test.c  scheduler.c  syncer.c  tasks_queue.c
framework/libs/libeloop/yodamk/: Makefile
framework/libs/log/: CMakeLists.txt
framework/libs/log/include/: RKLog.h
framework/libs/log/sample/: CMakeLists.txt
framework/libs/log/src/: CMakeLists.txt
framework/libs/log/yodamk/: Makefile
framework/libs/lumenlight/: CMakeLists.txt  LumenEffects.cpp  LumenEffects.h  LumenLight.cpp  LumenLight.h
framework/libs/lumenlight/yodamk/: Makefile
framework/libs/mingutils/: Android.mk  CMakeLists.txt  README.md  caps-versions.md  caps.md  config  ndk.mk  vsys.mk
framework/libs/mingutils/tests/: main.cpp
framework/libs/ota/: .gitignore  CMakeLists.txt  Makefile  S12otaunpack  ota_unpack.c  rokid_package.c  rokid_package.h  rokid_unpack.c  sha1.c  sha1.h  unpack.c
framework/libs/ota/bootx/: .gitignore  Makefile  boot.cpp  boot.hpp  changelog.txt  help.txt  main.c.bak  os.c  os.h  resolve_conf.c  resolve_conf.h  serial.hpp  storage.h  str2argv.c  str2argv.h  tftpd.c  tftpd.h  usb_slave.hpp  util.c  util.h  winadapt.h
framework/libs/ota/demo/: ota_demo.c
framework/libs/ota/recovery/: mtd-user.h  recovery.c  recovery.h
framework/libs/ota/yodamk/: Makefile
framework/libs/player/: CMakeLists.txt
framework/libs/player/include/: MediaPlayer.h  OpusCodec.h  OpusPlayer.h  SimplePlayer.h  Utils.h  WavPlayer.h  rk_ffplay.h
framework/libs/player/sample/: CMakeLists.txt
framework/libs/player/src/: CMakeLists.txt  Config.h  MediaPlayer.cpp  OpusCodec.cpp  OpusPlayer.cpp  RKSoundTouch.cpp  RKSoundTouch.h  SimplePlayer.cpp  WavPlayer.cpp  rk_ffplay.c
framework/libs/player/yodamk/: Config.in  Makefile
framework/libs/property/: CMakeLists.txt
framework/libs/property/include/: _system_properties.h  bionic_futex.h  strlcpy.h  system_properties.h
framework/libs/property/prop/: default.prop
framework/libs/property/src/: system_properties.cpp  system_properties_compat.c
framework/libs/vold/: CMakeLists.txt  vold_manager.c
framework/libs/vold/yodamk/: Makefile
framework/libs/wifi/: CMakeLists.txt  hostapd_command.c  hostapd_command.h  wpa_command.c  wpa_command.h
framework/libs/wifi/demo/: CMakeLists.txt  main.c
framework/libs/wifi/yodamk/: Makefile
framework/services/bluetooth/: CMakeLists.txt  common.mk
framework/services/bluetooth/demo/: CMakeLists.txt  adpcm_decoder.c  adpcm_decoder.h  bluetooth_atvv_test.c  bluetooth_monitor.c  bluetooth_test.c
framework/services/bluetooth/docs/: rokid_bluetooth_service_api.md
framework/services/bluetooth/include/: a2dpsink.h  a2dpsource.h  ble.h  ble_client.h  common.h  config.h  (+3 more)
framework/services/flora-dispatcher/: CMakeLists.txt  README.md  config  ndk.mk  vsys.mk
framework/services/property/: CMakeLists.txt
hardware/: .gitignore  CMakeLists.txt
hardware/cmake/: FindAndroidUtils.cmake
hardware/key_hw/: CMakeLists.txt  Makefile
hardware/key_hw/include/: key_hw.h
hardware/key_hw/src/: CMakeLists.txt  key_hw.c
hardware/libhardware/: CMakeLists.txt  hardware.c
hardware/libhardware/include/: rokidware
hardware/modules/: CMakeLists.txt
hardware/modules/autoconnect/: CMakeLists.txt  wifi_autoconncet_hw.c
hardware/modules/bluetooth/: CMakeLists.txt  bluetooth.c
hardware/modules/ethnet_hal/: CMakeLists.txt  ethnet_hw.c
hardware/modules/leds/: CMakeLists.txt  leds-HAL-guide.md  leds_hw.c  leds_i2c_hw.c  leds_pwm_hw.c  leds_yodastage_hw.c
hardware/modules/mic_array/: CMakeLists.txt  mic_array.c  mic_array_pcm.c
hardware/modules/modem/: CMakeLists.txt  modem_tty_hw.c
hardware/modules/power/: CMakeLists.txt  power_hw.c
hardware/modules/wifi_hal/: CMakeLists.txt  wifi_hw.c
hardware/yodamk/android-hardware/: Config.in  Makefile
hardware/yodamk/bcmdhd/: Makefile
hardware/yodamk/bcmdhd_cypress/: Makefile
hardware/yodamk/bcmdhd_fw/: Config.in  K2wlan  Makefile  S40wlan  S41bthid
hardware/yodamk/bcmdhd_fw_cypress/: K2wlan  Makefile  S40wlan_cm256  S40wlan_nb197
hardware/yodamk/bthid/: Makefile
hardware/yodamk/btusb/: Makefile
hardware/yodamk/hciattach/: Makefile  S57bluetooth_rpi3b+
hardware/yodamk/rtk_hci_uart/: Makefile
hardware/yodamk/rtk_hciattach/: Makefile  S40wlan  S57bluetooth  S57bluetooth_hisi  S57bluetooth_rk3308  wifi_connect.sh
hardware/yodamk/rtk_wifi/: Makefile
(+1668 files in other folders)
