cmake_minimum_required(VERSION 3.0)
project(yodaos-battery CXX)
set(CMAKE_CXX_STANDARD 11)

# MARK: - battery
set(APP_ROOT_DIR "/opt/apps/battery")
set(APP_INSTALL_DIR "${CMAKE_INSTALL_DIR}${APP_ROOT_DIR}")

file(GLOB BATTEERY_SRC *.js *.json)

install(FILES ${BATTEERY_SRC}
  DESTINATION ${APP_INSTALL_DIR}
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
install(DIRECTORY ./res
  DESTINATION ${APP_INSTALL_DIR}
  USE_SOURCE_PERMISSIONS)
