
add_library(android_hardware SHARED ${CMAKE_CURRENT_SOURCE_DIR}/hardware.c)
target_link_libraries(android_hardware dl ${ANDROID_CUTILS_LIBRARIES})

INSTALL( TARGETS android_hardware ${INSTALL_EXPORT}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

FILE(GLOB INCLUDE_FILES "include/hardware/*.h")
INSTALL(FILES ${INCLUDE_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/hardware)
